--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -21,6 +21,11 @@ Aggregate abundance LRPs were not appropriate. Factors include:
 -wide range in productivity values between CUs 
 
 
+WCVI Chinook main points: 
+
+
+
+
 Some ideas include:
 
 - If data limitations arise in application of LRP to a stock, increased monitoring, data quality could be part of recovery plan/ trigger
